# MFCC-features

./: CMakeLists.txt
include/: dct.h  fft.h  framing.h  hamming_window.h  mel_filter  pre_emphasis.h  reflect_padding.h
src/: main.c++
